--- a/part1.html
+++ b/part1.html
@@ -5,15 +5,11 @@
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>The Aviator: Part 1 | Codrops</title>
 	<meta name="description"
 		content="Demo of part 1: The Making of 'The Aviator': Animating a Basic 3D Scene with Three.js" />
 	<meta name="keywords"
 		content="three.js, webgl, tutorial, game, 3d, animation, airplane, web development, javascript" />
 	<meta name="author" content="Karim Maaloul for Codrops" />
-	<link rel="shortcut icon" href="favicon.ico">
-	<link href='https://fonts.googleapis.com/css?family=Playfair+Display:400,700,700italic' rel='stylesheet'
-		type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/demo.css" />
 	<link rel="stylesheet" type="text/css" href="css/styles.css" />
 	<script type="text/javascript" src="js/TweenMax.min.js"></script>
@@ -35,11 +31,11 @@
 	<iframe src="http://127.0.0.1:5500/index2.html" width="1550px" height="770px" title="Map" class="map"></iframe>
 
 	<button onclick="playGame()" class='button'>Play Game</button>
-	<audio id="dongco" autoplay>
+	<audio id="dongco" autoplay loop>
 		<source src="./dong_co.mp3">
 	</audio>
 
-	<audio id="bomno" autoplay>
+	<audio id="bomno" autoplay loop>
 		<source src="./bom_no.mp3">
 	</audio>
 
